Added Google analytics & ad code

--- a/feedback.html
+++ b/feedback.html
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script data-ad-client="ca-pub-4868290451743703" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
