--- a/instructions.html
+++ b/instructions.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="x-icon" href="icon.png">
     <link rel="shortcut icon" type="x-icon" href="icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script data-ad-client="ca-pub-4868290451743703" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <meta charset="utf-8">
 </head>
 <body>    
