--- a/results.html
+++ b/results.html
@@ -73,5 +73,16 @@
             background.src = "./compass.png";
         }
         </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Main -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-4868290451743703"
+         data-ad-slot="7642601359"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     </body>
     
