--- a/instructions.html
+++ b/instructions.html
@@ -1,7 +1,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
     <link href='style.css' rel='stylesheet' type='text/css'>
-    <title>SapplyValues Quiz</title>
+    <title>Espectro Político - Questionário</title>
     <link rel="icon" type="x-icon" href="icon.png">
     <link rel="shortcut icon" type="x-icon" href="icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +9,14 @@
 <meta charset="utf-8">
 </head>
 <body>    
-	<h1 class="title">SapplyValues</h1>
+	<h1 class="title">Espectro Político</h1>
     <svg id="svgHeader" style="width: 100%;" viewBox="0 0 112 19">
-		<text x="50%" y="15" class="svgHeader">SapplyValues</text>
+		<text x="50%" y="15" class="svgHeader">Espectro Político</text>
 	</svg>
     <hr>
-    <h2 style="text-align:center;">Instructions</h2>
-    <p class="question">You will be presented with a series of statements. For each one, click the button with your opinion on it.</p>
-    <button class="button" onclick="location.href='quiz.html?shuffle=true';" style="background-color: #2196f3;">Proceed (Shuffled)</button> <br>
-    <button class="button" onclick="location.href='quiz.html?shuffle=false';" style="background-color: #2196f3;">Proceed (Unshuffled)</button> <br>
+    <h2 style="text-align:center;">Instruções</h2>
+    <p class="question">Você será apresentado com uma série de declarações. Para cada uma, clique no botão com sua opinião sobre ela.</p>
+    <button class="button" onclick="location.href='quiz.html?shuffle=true';" style="background-color: #2196f3;">Prosseguir (embaralhado)</button> <br>
+    <button class="button" onclick="location.href='quiz.html?shuffle=false';" style="background-color: #2196f3;">Prosseguir (sem embaralhar)</button> <br>
     <button class="button" onclick="location.href='index.html';" style="background-color: #f44336;">Go Back</button> <br>
 </body>
