Removing google ads and a few extra translations

--- a/index.html
+++ b/index.html
@@ -9,18 +9,6 @@
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P89E16VP9B"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'G-P89E16VP9B');
-    </script>
-    <script data-ad-client="ca-pub-4868290451743703" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
@@ -30,14 +18,7 @@
     </svg>
     <hr>
     <img src="" id="banner">
-    <button class="button" onclick="location.href='instructions.html';">Click here to start!</button>
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Main -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4868290451743703" data-ad-slot="7642601359" data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <button class="button" onclick="location.href='instructions.html';">Clique aqui para começar!</button>
 
     <h2>What is SapplyValues?</h2>
     <p>SapplyValues is a political compass test that combines the questions of the <a href="http://sapplypoliticalcompass.com/">Sapply test</a>* with the UI of <a href="https://8values.github.io/">8values</a>. You will be presented by a statement, and then
