More translations - test

--- a/instructions.html
+++ b/instructions.html
@@ -17,5 +17,5 @@
     <p class="question">Você será apresentado com uma série de declarações. Para cada uma, clique no botão com sua opinião sobre ela.</p>
     <button class="button" onclick="location.href='quiz.html?shuffle=true';" style="background-color: #2196f3;">Prosseguir (embaralhado)</button> <br>
     <button class="button" onclick="location.href='quiz.html?shuffle=false';" style="background-color: #2196f3;">Prosseguir (sem embaralhar)</button> <br>
-    <button class="button" onclick="location.href='index.html';" style="background-color: #f44336;">Go Back</button> <br>
+    <button class="button" onclick="location.href='index.html';" style="background-color: #f44336;">Voltar</button> <br>
 </body>
