--- a/results.html
+++ b/results.html
@@ -67,7 +67,7 @@
                 ctx.fillText("Eixo Prog. / Cons. (z): " + z_axis, 725, 1525)
                 ctx.textAlign = "right"
                 ctx.font = "60px Montserrat"
-                ctx.fillText("Espectro Político", 1820, 1560)
+                ctx.fillText("espectro.eza.link", 1820, 1560)
 
                 document.getElementById("banner").src = c.toDataURL();
             }
