--- a/instructions.html
+++ b/instructions.html
@@ -4,14 +4,15 @@
     <title>Espectro Político - Questionário</title>
     <link rel="icon" type="x-icon" href="icon.png">
     <link rel="shortcut icon" type="x-icon" href="icon.png">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
 </head>
-<body>    
-	<h1 class="title">Espectro Político</h1>
+
+<body>
+    <h1 class="title">Espectro Político</h1>
     <hr>
     <h2 style="text-align:center;">Instruções</h2>
-    <p class="question">Você será apresentado com uma série de declarações. Para cada uma, clique no botão com sua opinião sobre ela.</p>
+    <p class="question">Será apresentado a você com uma série de declarações. Para cada uma, clique no botão com sua opinião sobre ela.</p>
     <button class="button" onclick="location.href='quiz.html?shuffle=true';" style="background-color: #2196f3;">Prosseguir (embaralhado)</button> <br>
     <button class="button" onclick="location.href='quiz.html?shuffle=false';" style="background-color: #2196f3;">Prosseguir (sem embaralhar)</button> <br>
     <button class="button" onclick="location.href='index.html';" style="background-color: #f44336;">Voltar</button> <br>
