--- a/instructions.html
+++ b/instructions.html
@@ -12,7 +12,7 @@
     <h1 class="title">Espectro Político</h1>
     <hr>
     <h2 style="text-align:center;">Instruções</h2>
-    <p class="question">Será apresentado a você com uma série de declarações. Para cada uma, clique no botão com sua opinião sobre ela.</p>
+    <p class="question">Será apresentado a você uma série de declarações. Para cada uma, clique no botão com sua opinião sobre ela.</p>
     <button class="button" onclick="location.href='quiz.html?shuffle=true';" style="background-color: #2196f3;">Prosseguir (embaralhado)</button> <br>
     <button class="button" onclick="location.href='quiz.html?shuffle=false';" style="background-color: #2196f3;">Prosseguir (sem embaralhar)</button> <br>
     <button class="button" onclick="location.href='index.html';" style="background-color: #f44336;">Voltar</button> <br>
