--- a/quiz.html
+++ b/quiz.html
@@ -135,7 +135,7 @@
                 }
             }
             //return;
-            location.href = ((window.location.hostname == "espectro.eza.link") ? `feedback.html` : `results.html`) + args
+            location.href = ((window.location.hostname == "espectro.eza.link") ? `results.html` : `results.html`) + args
 
         }
 
