--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <button class="button" onclick="location.href='instructions.html';">Clique aqui para começar!</button>
 
     <h2>O que é o Espectro Político?</h2>
-    <p>O Espectro Político é um teste para avaliar em sua posicao política através de algumas questões. Você responderá com sua opinião sobre uma declaração, se concorda ou discorda, com cada resposta afetando ligeiramente sua pontuação. No final do questionário,
-        suas respostas serão exibidas em uma bússola política. Há <b><u><span id="numOfQuestions"></span></u></b> perguntas no teste.</p>
+    <p>O Espectro Político é um teste para avaliar sua posicao política através de algumas questões. Você responderá com sua opinião sobre uma declaração, se concorda ou discorda, com cada resposta afetando ligeiramente sua pontuação. No final do questionário,
+        suas respostas serão exibidas em uma bússola política. Há <b><u><span
+                    id="numOfQuestions"></span></u></b> perguntas no teste.</p>
 
-    <p>O site é uma tradução do <a href="https://sapplyvalues.github.io/">SapplyValues</a> e você pode encontrar o código e contribuir <a href=" https://github.com/everton137/espectropolitico ">aqui</a>.</p>
+    <p>Esse site é uma tradução do <a href="https://sapplyvalues.github.io/">SapplyValues</a> e você pode encontrar o código para contribuir <a href=" https://github.com/everton137/espectropolitico ">aqui</a>.</p>
 
     <!-- Main -->
     <script type="application/javascript" src="questions.js "></script>
