--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="button" onclick="location.href='instructions.html';">Clique aqui para começar!</button>
 
     <h2>O que é o Espectro Político?</h2>
-    <p>O Espectro Político é um teste para avaliar sua posicao política através de algumas questões. Você responderá com sua opinião sobre uma declaração, se concorda ou discorda, com cada resposta afetando ligeiramente sua pontuação. No final do questionário,
+    <p>O Espectro Político é um teste para avaliar sua posição política através de algumas questões. Você responderá com sua opinião sobre uma declaração, se concorda ou discorda, com cada resposta afetando ligeiramente sua pontuação. No final do questionário,
         suas respostas serão exibidas em uma bússola política. Há <b><u><span
                     id="numOfQuestions"></span></u></b> perguntas no teste.</p>
 
