--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        var clicky_site_ids = clicky_site_ids || [];
+        clicky_site_ids.push(101307986);
+    </script>
+    <script async src="//static.getclicky.com/js"></script>
 </head>
 
 <body>
@@ -19,8 +24,7 @@
 
     <h2>O que é o Espectro Político?</h2>
     <p>O Espectro Político é um teste para avaliar sua posição política através de algumas questões. Você responderá com sua opinião sobre uma declaração, se concorda ou discorda, com cada resposta afetando ligeiramente sua pontuação. No final do questionário,
-        suas respostas serão exibidas em uma bússola política. Há <b><u><span
-                    id="numOfQuestions"></span></u></b> perguntas no teste.</p>
+        suas respostas serão exibidas em uma bússola política. Há <b><u><span id="numOfQuestions"></span></u></b> perguntas no teste.</p>
 
     <p>Esse site é uma tradução do <a href="https://sapplyvalues.github.io/">SapplyValues</a> e você pode encontrar o código para contribuir <a href=" https://github.com/everton137/espectropolitico ">aqui</a>.</p>
 
