--- a/quiz.html
+++ b/quiz.html
@@ -10,6 +10,11 @@
     <script type="application/javascript" src="questions.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        var clicky_site_ids = clicky_site_ids || [];
+        clicky_site_ids.push(101307986);
+    </script>
+    <script async src="//static.getclicky.com/js"></script>
 </head>
 
 <body>
@@ -18,11 +23,13 @@
     <hr>
     <h2 style="text-align:center;" id="question-number">Loading...</h2>
     <p class="question" id="question-text"></p>
-    <button class="button" onclick="next_question(1.0)" style="background-color: #1b5e20;">Concordo fortemente</button> <br>
+    <button class="button" onclick="next_question(1.0)" style="background-color: #1b5e20;">Concordo fortemente</button>
+    <br>
     <button class="button" onclick="next_question(0.5)" style="background-color: #4caf50;">Concordo</button> <br>
     <button class="button" onclick="next_question(0)" style="background-color: #bbbbbb;">Neutro / Incerto</button> <br>
     <button class="button" onclick="next_question(-0.5)" style="background-color: #f44336;">Discordo</button> <br>
-    <button class="button" onclick="next_question(-1.0)" style="background-color: #b71c1c;">Discordo fortemente</button> <br>
+    <button class="button" onclick="next_question(-1.0)" style="background-color: #b71c1c;">Discordo fortemente</button>
+    <br>
     <button class="small_button" onclick="prev_question()" id="back_button">Voltar</button>
     <button class="small_button_off" id="back_button_off">Voltar</button><br>
 
