--- a/results.html
+++ b/results.html
@@ -6,6 +6,11 @@
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        var clicky_site_ids = clicky_site_ids || [];
+        clicky_site_ids.push(101307986);
+    </script>
+    <script async src="//static.getclicky.com/js"></script>
 </head>
 
 <body>
