--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>O Espectro Político é um teste para avaliar sua posição política através de algumas questões. Você responderá com sua opinião sobre uma declaração, se concorda ou discorda, com cada resposta afetando ligeiramente sua pontuação. No final do questionário,
         suas respostas serão exibidas em uma bússola política. Há <b><u><span id="numOfQuestions"></span></u></b> perguntas no teste.</p>
 
-    <p>Esse site é uma tradução do <a href="https://sapplyvalues.github.io/">SapplyValues</a> e você pode encontrar o código para contribuir <a href=" https://github.com/everton137/espectropolitico ">aqui</a>.</p>
+    <p>Esse site é uma tradução do <a href="https://sapplyvalues.github.io/">SapplyValues</a> e você pode encontrar o código para contribuir <a href="https://github.com/everton137/espectro.eza.link">aqui</a>.</p>
 
     <!-- Main -->
     <script type="application/javascript" src="questions.js "></script>
